# vomeip-learn

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
CommonApiDemo/: CMakeLists.txt  README.md
CommonApiDemo/config/: HelloWorld-someip.fdepl  HelloWorld.fidl
CommonApiDemo/src/: Client.cpp  Server.cpp
CommonApiDemo/src-gen/core/v1/commonapi/examples/: CommonTypes.hpp  Helloworld.hpp  HelloworldProxy.hpp  HelloworldProxyBase.hpp  HelloworldStub.hpp  HelloworldStubDefault.hpp
CommonApiDemo/src-gen/someip/v1/commonapi/examples/: CommonTypesSomeIPDeployment.cpp  CommonTypesSomeIPDeployment.hpp  HelloworldSomeIPCatalog.json  HelloworldSomeIPDeployment.cpp  HelloworldSomeIPDeployment.hpp  HelloworldSomeIPProxy.cpp  HelloworldSomeIPProxy.hpp  HelloworldSomeIPStubAdapter.cpp  HelloworldSomeIPStubAdapter.hpp
demo1/: app.cpp
demo2/: client.cpp  server.cpp
demo3/: client.cpp  server.cpp
demo4/: client.cpp  server.cpp  server.json
demo5/: Dockerfile  client.cpp  client.json  server.cpp  server.json
demo6/: client.cpp  client.json  server.cpp  server.json
